<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_background"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_360" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/Username"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" /><![CDATA[

    />
    ]]>

    <EditText
        android:id="@+id/editText"
        android:layout_width="282dp"
        android:layout_height="38dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:onClick="download"
        android:id="@+id/button"
        android:layout_width="283dp"
        android:layout_height="39dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="#FFFFFF"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#dca25b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="53dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:srcCompat="@drawable/user"
        />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="43dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="292dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lock" />

    <TextView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>