<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".options"
    android:background="#e6e8e7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#2d317a"
            android:layout_weight="0.1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:background="#2675b8"
            >

            <ImageView
                android:id="@+id/spinner"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|left"
                android:background="@drawable/menu_white_icon" />
            <EditText

                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_button_background"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/search"
                android:textSize="15dp"
                />

            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/user_white_icon"
                />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:columnCount="2"
            android:horizontalSpacing="50dp"
            android:padding="20dp"
            android:rowCount="4"
            android:verticalSpacing="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/faulty_accounts_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Account faults"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/accounts_faults_noti_num"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/healthy_accounts_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Healthy accounts"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/healthy_acc_noti_num"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/faulty_devices_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Faulty devices"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/foult_devices_noti_num"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/healthy_devices_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Healthy devices"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/healthy_device_noti_num"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/reports_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Healthcare reports"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/healthcare_report_noti_num"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/notification_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="unread notification"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/round_number"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/unread_noti_num"
                    android:textColor="#FFFFFF" />
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/settings_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="     Device settings   "
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button_background"
                android:drawableBottom="@drawable/faulty_accounts_icon"

                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:src="@drawable/other_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Other"
                    android:textAllCaps="false"
                    android:textColor="#e6c29f"
                    android:textSize="15sp" />
            </LinearLayout>


        </GridLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>